# selma-assistant

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  getting-started.md  voice-commands.md
docs/api-reference/: agents.md  life.md  memory.md  voice.md
docs/superpowers/plans/: 2026-07-05-selma-memory-core.md  2026-07-06-user-documentation.md
docs/superpowers/specs/: 2026-07-05-selma-memory-core-design.md  2026-07-06-selma-agents-design.md  2026-07-06-selma-life-design.md  2026-07-06-selma-voice-design.md  2026-07-06-user-documentation-design.md
docs/tutorials/: 01-reminders-and-scheduling.md  02-custom-voice-intent.md  03-custom-agent.md
src/selma/agents/: __init__.py  assistant.py  coordinator.py  (+7 more)
tests/: __init__.py  conftest.py  test_config.py  test_entailment_build.py  test_exceptions.py  test_public_api.py  test_terms.py
tests/agents/: conftest.py  test_coordinator.py  test_projects.py  test_runner.py  test_tasks.py
tests/api/: test_ask.py  test_entailment.py  test_find.py  test_forget.py  test_recall.py  test_relate.py  test_remember.py  test_supersede.py
tests/backends/: __init__.py  conftest.py  test_embedded_durability.py  test_embedded_smoke.py  test_protocol.py
tests/life/: conftest.py  test_activity.py  test_assistant.py  test_reminders.py  test_schedule.py  test_scheduler.py
tests/ontology/: __init__.py  test_consistency.py  test_describe.py  test_example_queries.py
tests/property/: __init__.py  test_temporal_invariants.py
tests/voice/: conftest.py  test_adapters.py  test_gateway.py  test_intents.py  test_router.py
(+30 files in other folders)
