[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "selma-memory"
version = "0.1.0"
description = "Semantic RDF/SPARQL memory core for the Selma assistant platform."
requires-python = ">=3.11"
dependencies = [
    "pyoxigraph>=0.5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"